tests/baselines/reference/maxConstraints.errors.txt
==== tests/cases/compiler/maxConstraints.ts (3 errors) ====
    interface Comparable<T> {
        compareTo(other: T): number;
    }
    interface Comparer {
        <T extends Comparable<T>>(x: T, y: T): T;
         ~~~~~~~~~~~~~~~~~~~~~~~
!!! maxConstraints.ts(5,6): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }
    var max2: Comparer = (x, y) => { return (x.compareTo(y) > 0) ? x : y };
    var maxResult = max2(1, 2);
                    ~~~~
!!! maxConstraints.ts(8,17): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type 'Number' is missing property 'compareTo' from type 'Comparable<number>'.
                    ~~~~
!!! maxConstraints.ts(8,17): error TS2087: Could not select overload for 'call' expression.